src/nrrd/nrrd.h


typedef struct {
  size_t size;              
  double spacing;           
  double thickness;         
  double min, max;          
  double spaceDirection[NRRD_SPACE_DIM_MAX];
  int center;               
  int kind;                 
  char *label,              
    *units;                 
} NrrdAxisInfo;
typedef struct {
  void *data;                       
  int type;                         
  unsigned int dim;                 
  NrrdAxisInfo axis[NRRD_DIM_MAX];  
  char *content;                    
  char *sampleUnits;                
  int space;                        
  unsigned int spaceDim;            
  char *spaceUnits[NRRD_SPACE_DIM_MAX];
  double spaceOrigin[NRRD_SPACE_DIM_MAX];
  double measurementFrame[NRRD_SPACE_DIM_MAX][NRRD_SPACE_DIM_MAX];
  size_t blockSize;                 
  double oldMin, oldMax;            
  void *ptr;                        
  char **cmt;
  airArray *cmtArr;
  char **kvp;
  airArray *kvpArr;
} Nrrd;
typedef struct {
  char name[AIR_STRLEN_SMALL];
  unsigned int numParm;  
  double (*support)(const double *parm);
  double (*integral)(const double *parm);
  float (*eval1_f)(float x, const double *parm);
  void (*evalN_f)(float *f, const float *x, size_t N, const double *parm);
  double (*eval1_d)(double x, const double *parm);
  void (*evalN_d)(double *f, const double *x, size_t N, const double *parm);
} NrrdKernel;
typedef struct {
  const NrrdKernel *kernel;
  double parm[NRRD_KERNEL_PARMS_NUM];
} NrrdKernelSpec;