python/cffi/cdef/cdef_air.h


typedef struct {
  const char *name;
  unsigned int M;
  const char **str; 
  const int *val;   
  const char **desc;
  const char **strEqv;
  const int *valEqv;
  int sense; 
} airEnum;
typedef struct {
  void *data,               
    **dataP;                
  unsigned int len,         
    *lenP,                  
    incr,                   
    size;                   
  size_t unit;              
  int noReallocWhenSmaller; 
  void *(*allocCB)(void);  
  void *(*freeCB)(void *); 
  void (*initCB)(void *);  
  void (*doneCB)(void *);  
} airArray;